--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="es" class="my-app-dark">
+
 <head>
   <meta charset="utf-8">
   <title>Crossfit-RM</title>
   <base href="/">
+  <link id="app-theme" rel="stylesheet" type="text/css" href="assets/themes/saga-blue/theme.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
