Modo oscuro en localStogare, sidebar, iconos.

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
   <meta charset="utf-8">
   <title>Crossfit-RM</title>
   <base href="/">
-  <link id="app-theme" rel="stylesheet" type="text/css" href="assets/themes/saga-blue/theme.css">
+  <!-- <link id="app-theme" rel="stylesheet" type="text/css" href="asset  s/themes/saga-blue/theme.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.scss"> 
+  <link rel="icon" type="image/x-icon" href="assets/images/kettlebell.png">
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="spinner-kettlebell"></div>
+  </app-root>
 </body>
 
 </html>
