--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <title>Crossfit-RM</title>
   <base href="/">
-  <!-- <link id="app-theme" rel="stylesheet" type="text/css" href="asset  s/themes/saga-blue/theme.css"> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link id="app-theme" rel="stylesheet" href="node_modules/primeng/resources/themes/saga-blue/theme.css">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.scss"> 
   <link rel="icon" type="image/x-icon" href="assets/images/kettlebell.png">
 </head>
